--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,2 +1,7 @@
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
 @import '../../palette.scss';
+
+
+body {
+  color: $primary-text-color;
+}
