--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -1,11 +1,20 @@
 @import '../../palette.scss';
 
 .content {
-  background-color: $primary-color-light;
-}
+  .copyright {
+    padding: 20px;
+    font-size: 0.8rem;
+    text-align: center;
 
-.tile {
-  background: linear-gradient(0deg, red, blue);
-  height: 400px;
-  border-radius: 4px;
+    hr {
+      border: 0;
+      height: 1px;
+      background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0)
+      );
+    }
+  }
 }
