--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,25 +1,46 @@
 @import '../../palette.scss';
 
-.navbar-wrap {
+nav {
   background-color: $primary-color;
+  padding: 20px;
 
-  .navbar {
-    background-color: rgba(0, 0, 0, 0);
-    padding: 2px;
-
-    button:focus {
-      outline: none;
-      background-color: $primary-color-dark;
-    }
-
-    .navbar-brand {
-      svg {
-        vertical-align: middle;
-      }
-      .brand-text {
-        margin-left: 20px;
-      }
+  .brand {
+    svg {
+      vertical-align: middle;
     }
     
+    .brand-text {
+      color: $invert-text-color;
+      padding: 0 20px;
+      vertical-align: middle;
+      font-size: 2rem;
+      font-weight: 700;
+
+    }
+  }
+
+  ul.navigation-buttons {
+
+    list-style: none;
+    margin: 0;
+    text-align: right;
+    height: 100%;
+
+    li {
+      display: inline-block;
+      padding: 0 20px;
+
+      a {
+        color: $invert-text-color;
+        text-decoration: none;
+        font-weight: 400;
+      }
+
+      a:hover {
+        color: $invert-text-color-dark;
+        font-weight: 700;
+      }
+
+    }
   }
 }
