Changing thumbnail expansion system

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -8,6 +8,10 @@ nav {
     svg {
       vertical-align: middle;
     }
+
+    .logo path {
+      fill: $accent-color;
+    }
     
     .brand-text {
       color: $invert-text-color;
